@startuml
interface ShootStrategy {
~ List<BaseBullet> shoot(AbstractAircraft)
}
class Game {
}
class ScatterShoot {
+ List<BaseBullet> shoot(AbstractAircraft)
}
class StraightShoot {
+ List<BaseBullet> shoot(AbstractAircraft)
}
class Context {
- ShootStrategy shootStrategy
+ List<BaseBullet> executeShootStrategy(AbstractAircraft)
+ ShootStrategy getShootStrategy()
+ void setShootStrategy(ShootStrategy)
}



Context <- Game
Game .> ScatterShoot
Context o-> ShootStrategy
ShootStrategy <|.. ScatterShoot
ShootStrategy <|.. StraightShoot
@enduml